--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "lspa",
   "version": "1.0.0",
-  "description": "A Angular SPA frontend for the Limitless Garden API",
+  "description": "Angular SPA frontend for the Limitless Garden API",
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 8080",
     "test": "karma start",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail"
   },
-  "license": "Apache 2.0",
+  "license": "Apache-2.0",
   "dependencies": {
     "@angular/common": "~2.3.0",
     "@angular/compiler": "~2.3.0",
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "~2.3.0",
     "@angular/platform-browser-dynamic": "~2.3.0",
     "@angular/router": "~3.3.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-rc.4",
     "zone.js": "^0.7.2"
