--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-rc.4",
-    "zone.js": "^0.7.2"
+    "zone.js": "0.7.4"
   },
   "devDependencies": {
     "@types/jasmine": "^2.5.35",
