--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lspa",
   "version": "1.0.0",
   "description": "Angular SPA frontend for the Limitless Garden API",
+  "repository": "https://github.com/abarbanell/lspa",
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 8080",
     "test": "karma start",
