--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "font-awesome": "4.7.0",
+    "font-awesome-webpack": "0.0.4",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
     "jasmine-core": "^2.5.2",
@@ -48,13 +50,12 @@
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.30",
     "karma-webpack": "^1.8.0",
-    "null-loader": "^0.1.1",
-    "phantomjs-prebuilt": "^2.1.7",
-    "font-awesome": "4.7.0",
-    "font-awesome-webpack": "0.0.4",
     "less": "2.7.2",
     "less-loader": "2.2.3",
+    "null-loader": "^0.1.1",
+    "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
